[package]
name = "ice0"
version = "0.1.0"
authors = ["Joshua Salzedo <joshuasalzedo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
async_trait = ["async-trait"]


[dependencies]
async-trait = { version="0.1.42", optional = true }
ufmt = "0.1.0"
